# rimio

./: Cargo.toml  Makefile  README.md  ROADMAP.md  config.example.yaml
.github/workflows/: integration.yml
amberblob-core/: Cargo.toml
amberblob-core/src/: coordinator.rs  lib.rs  slot_manager.rs
amberblob-core/src/operations/: internal_get_head.rs  internal_get_part.rs  internal_put_head.rs  internal_put_part.rs  mod.rs  put_blob.rs
amberblob-core/src/registry/: etcd.rs  redis.rs
amberblob-core/src/storage/: chunk_store.rs  metadata_store.rs  mod.rs  part_store.rs
amberblob-server/src/: config.rs  main.rs  server.rs
amberblob-server/src/server/: external.rs  internal.rs  mod.rs  types.rs
amberio-core/: Cargo.toml
amberio-core/src/: coordinator.rs  error.rs  lib.rs  node.rs
amberio-core/src/cluster/: client.rs  mod.rs  state.rs  types.rs
amberio-core/src/operations/: delete_blob.rs  heal_heads.rs  heal_repair.rs  heal_slotlets.rs  init_cluster.rs  internal_get_part.rs  internal_put_head.rs  internal_put_part.rs  list_blobs.rs  mod.rs  put_blob.rs  read_blob.rs
amberio-core/src/registry/: etcd.rs  mod.rs  redis.rs
amberio-core/src/storage/: archive_store.rs  metadata_store.rs  mod.rs  part_store.rs
amberio-s3-gateway/: Cargo.toml
amberio-s3-gateway/src/: error.rs  lib.rs  s3.rs  types.rs  util.rs
amberio-server/: Cargo.toml
amberio-server/src/: config.rs  main.rs
amberio-server/src/server/: external.rs  internal.rs  mod.rs  s3_gateway.rs  types.rs
integration/: 002_external_blob_crud.py  003_internal_healing.py  005_rfc003_put_layout_contract.py  007_rfc003_archive_url_redis_readthrough.py  009_server_init_only.py  010_init_scan_redis_mock.py  011_archive_write_through_redis.py  012_archive_write_through_s3_minio.py  013_s3_gateway_basic.py  014_s3_get_object_compat.py  015_s3_put_list_compat.py  016_rfc0008_join_rejects_local_conf_dependence.py  017_rfc0008_cluster_url_parse_contract.py  018_rfc0008_write_gate_api_contract.py  019_rfc0008_force_takeover_contract.py  020_rfc0008_join_accepts_redis_registry_url.py  021_rfc0008_join_accepts_etcd_registry_url.py  022_rfc0010_single_port_gossip_start_join.py  README.md  _harness.py  pyproject.toml  run_all.py
rfc/: 0001-initial-design.md  0002-revised-design.md  0003-indexed-parts-and-archive-bootstrap.md  0004-archive-store-and-write-through.md  0005-s3-gateway-and-api-prefix-migration.md  0006-s3-get-object-compatibility-roadmap.md  0007-s3-put-list-compatibility-roadmap.md  0008-crdt-gossip-registry-for-slot-mapping.md  0009-init-cluster-bootstrap-and-write-gate.md  0010-gossip-address-from-initial-cluster-and-internal-bootstrap.md
rimio-core/: Cargo.toml
rimio-core/src/: lib.rs
rimio-core/src/archive/: mod.rs
rimio-core/src/cluster/: client.rs  state.rs
rimio-core/src/registry/: factory.rs  gossip_internal_transport.rs  gossip_memberlist.rs  mod.rs  redis.rs
rimio-core/src/storage/: metadata_store.rs
rimio-meta/: Cargo.toml
rimio-meta/src/: error.rs  gossip_internal_transport.rs  lib.rs  metakv.rs
rimio-server/src/: config.rs  main.rs
rimio-server/src/server/: internal.rs  mod.rs  types.rs
src/: chunk_store.rs  config.rs  error.rs  etcd_store.rs  lib.rs  main.rs  metadata_store.rs  node.rs  server.rs  slot_manager.rs  two_phase_commit.rs
