[package]
name = "amberio-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Server binary for Amberio - lightweight object storage for edge cloud"

[[bin]]
name = "amberio"
path = "src/main.rs"

[dependencies]
amberio-core = { path = "../amberio-core" }
amberio-s3-gateway = { path = "../amberio-s3-gateway" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
ulid = "1.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
