[package]
name = "rimio-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Core library for Rimio - lightweight object storage for edge cloud"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
etcd-client = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
ulid = "1.1"
bytes = "1.5"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
object_store = { version = "0.11", features = ["aws"] }
futures-util = "0.3"
rimio-meta = { path = "../rimio-meta" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
