[package]
name = "rimio-meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Metadata/gossip layer for Rimio"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
tracing = "0.1"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
memberlist = { version = "0.7", default-features = false, features = ["tokio", "tcp"] }
smol_str = "0.3"
