[package]
name = "rimio-meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Metadata/gossip layer for Rimio"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
